# QtSerialAssist

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  QtSerialAssist-2.1.8-linux-amd64.deb  QtSerialAssist.desktop  QtSerialAssist_zh_CN.ts  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.conf  resources.qrc  settingsdialog.cpp  settingsdialog.h  界面说明.md
.github/workflows/: build.yml
AppDir/: AppRun
AppDir/usr/share/applications/: qtserialassist.desktop
commands/: 4G模块.json  蓝牙指令.json
deb-pkg/DEBIAN/: control
deb-pkg/opt/QtSerialAssist/: QtSerialAssist
docs/: GitHub-Actions-CI.md  README.md  packaging-notes.md  任务文档.md  界面说明.md
qml/: main.qml
qml/components/: DButton.qml  DComboBox.qml  DSwitch.qml  DTabBar.qml  DTabButton.qml  DTextEdit.qml  DropWindow.qml
qml/pages/: LeftPanel.qml  ModbusPanel.qml  QuickCmdPanel.qml  RightPanel.qml  SettingsPage.qml
qml/theme/: DeepinTheme.qml
src/: main.cpp
src/backend/: AppCore.cpp  AppCore.h  DataProcessor.cpp  DataProcessor.h  ModbusEngine.cpp  ModbusEngine.h  NetworkManager.cpp  NetworkManager.h  QuickCmdManager.cpp  QuickCmdManager.h  SerialPortManager.cpp  SerialPortManager.h  SettingsManager.cpp  SettingsManager.h
